Deployment_api_Kubernetes/my-service-project.yml
apiVersion: v1
kind: Service
metadata:
  name: my-api-project-churn-service
  labels:
    app: my-api
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-api
