Deployment_api_Kubernetes/my-ingress-project.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-api-project-ingress
spec:
  defaultBackend:
    service:
      name: my-api-project-churn-service
      port:
        number: 8001
